--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,19 +6,15 @@ author_profile: true
 ---
 
 **Projects And Achievements**
-Throughout my career, I have successfully contributed to numerous projects delivering
-innovative solutions that have had a significant impact on business outcomes. My
-commitment to excellence and my ability to adapt to emerging technologies make me a
-valuable asset in any data-driven project.
+Throughout my career, I have successfully contributed to numerous projects deliveringinnovative solutions that have had a significant impact on business outcomes. My
+commitment to excellence and my ability to adapt to emerging technologies make me avaluable asset in any data-driven project.
 
-❖ **Advanced Pipeline Leak Detection System**
-Associated with LTI - Larsen & Toubro Infotech
-Developed a powerful pipeline leak detection system with a multi-sensor data
-fusion approach. The system uses a complicated logic flow algorithm to analyze
-readings from numerous embedded sensors and detect anomalies that indicate
-leaks. The next phase will involve installing predictive machine learning models
-on Azure cloud, data warehousing in Snowflake, improving early leak detection
-capabilities, and overall pipeline safety.
+
+**Advanced Pipeline Leak Detection System**
+Associated with LTI - Larsen & Toubro InfotechDeveloped a powerful pipeline leak detection system with a multi-sensor datafusion approach. The system uses a complicated logic flow algorithm to analyze
+readings from numerous embedded sensors and detect anomalies that indicateleaks. The next phase will involve installing predictive machine learning models
+on Azure cloud, data warehousing in Snowflake, improving early leak detectioncapabilities, and overall pipeline safety.
+
 
 ❖ **ESG Manufacturing - Performance Analysis and Improvement Tool**
 Associated with Soothsayer Analytics
