--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,9 +1,73 @@
 ---
 layout: archive
-title: "Teaching"
+title: "proects"
 permalink: /projects/
 author_profile: true
+redirect_from:
+  - /resume
 ---
+
+{% include base_path %}
+
+Education
+======
+I completed my graduation from Jawaharlal Nehru Technological University and later
+earned my Post-Graduation in Big Data Analytics and Optimization from International
+School of Engineering (INSOFE). This programme provided me with advanced abilities
+in data analytics and machine learning, preparing me for real-world difficulties in the
+rapidly changing sector of big data. My path at INSOFE was transformative, mirroring
+my commitment to excellence in the field of data science. The programme provided me
+with a thorough understanding of cutting-edge technology and processes, preparing me
+to face real-world difficulties in the dynamic field of big data analytics.
+
+Professional Work experience
+======
+* Sep 2022: Soothsayer Analytics
+  * Senior Data Scientist · Full-time
+  * Michigan, United States · On-sites
+  * Skills: Machine Learningt
+
+* Apr 2021: LTI - Larsen & Toubro Infotech
+  * Data Scientist · Full-time
+  * Hyderabad, Telangana, India
+  * Skills: Machine Learning
+    
+* May 2015: YASH Technologies
+  * Associate Consultant · Full-time
+  * Hyderabad, Telangana, India
+  
+  
+Skills
+======
+* Data Transformation: Proven track record of transforming raw data intoactionable insights.
+* AI and Machine Learning: Skilled in developing and deploying advanced machinelearning models.
+* Big Data Solutions: Expertise in designing and implementing scalable Big Datasolutions.
+* Workflow Automation: Adept at building and automating sophisticated, robust,and scalable workflow pipelines.
+
+
+
+Publications
+======
+  <ul>{% for post in site.publications %}
+    {% include archive-single-cv.html %}
+  {% endfor %}</ul>
+  
+Talks
+======
+  <ul>{% for post in site.talks %}
+    {% include archive-single-talk-cv.html %}
+  {% endfor %}</ul>
+  
+Teaching
+======
+  <ul>{% for post in site.teaching %}
+    {% include archive-single-cv.html %}
+  {% endfor %}</ul>
+  
+Service and leadership
+======
+* Currently signed in to 43 different slack teams
+
 
 **Projects And Achievements**
 Throughout my career, I have successfully contributed to numerous projects deliveringinnovative solutions that have had a significant impact on business outcomes. My
